# frs_special_groups

./: .gitignore  .gitmodules  cors.txt  readme.md
apidoc/: apidoc.json  create_apidoc  header.md
backend/: add_user.php  auth.php  config.php  delete_faces.php  frs_api.php  get_people_info.php  get_users.php  list_faces.php  login.php  readme.txt  register_face.php  remove_user.php  search_faces.php  send_photo_telegram.php  send_telegram.php  sg_callback.php  update_person_info.php  update_user.php
backend/mysql/: access_right_types.sql  db_dump.sql  people_info.sql  sgroups.sql  user_bots.sql  user_rights.sql  users.sql
frontend/: .gitignore  README.md  build.txt  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/ru/lanta/frontend/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  stub.dart  stub_io.dart  stub_web.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
utils/search_faces/: .gitignore  CMakeLists.txt  main.cpp  search_faces.config.example
utils/search_faces/contrib/: CMakeLists.txt
utils/search_faces/contrib/abseil-cpp-cmake/: CMakeLists.txt
utils/search_faces/contrib/cpr-cmake/: CMakeLists.txt
utils/search_faces/contrib/crow-cmake/: CMakeLists.txt
utils/search_faces/contrib/mysql-connector-cpp-cmake/: CMakeLists.txt
